fix extra whitespace - Legend and Basemap Gallery panels

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ calcite-shell-panel {
 }
 
 .esri-widget--panel {
-  height: 80vh;
+  height: 70vh;
 }
 
 .esri-basemap-gallery:focus-within {
